src/bindings_windows_x86.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_device_list_info_node"]
        [::std::mem::size_of::<_ft_device_list_info_node>() - 100usize];
    ["Alignment of _ft_device_list_info_node"]
        [::std::mem::align_of::<_ft_device_list_info_node>() - 4usize];
    ["Offset of field: _ft_device_list_info_node::Flags"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Flags) - 0usize];
    ["Offset of field: _ft_device_list_info_node::Type"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Type) - 4usize];
    ["Offset of field: _ft_device_list_info_node::ID"]
        [::std::mem::offset_of!(_ft_device_list_info_node, ID) - 8usize];
    ["Offset of field: _ft_device_list_info_node::LocId"]
        [::std::mem::offset_of!(_ft_device_list_info_node, LocId) - 12usize];
    ["Offset of field: _ft_device_list_info_node::SerialNumber"]
        [::std::mem::offset_of!(_ft_device_list_info_node, SerialNumber) - 16usize];
    ["Offset of field: _ft_device_list_info_node::Description"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Description) - 32usize];
    ["Offset of field: _ft_device_list_info_node::ftHandle"]
        [::std::mem::offset_of!(_ft_device_list_info_node, ftHandle) - 96usize];
};
impl Default for _ft_device_list_info_node {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type FT_DEVICE_LIST_INFO_NODE = _ft_device_list_info_node;
pub const FT_FLAGS_OPENED: _bindgen_ty_6 = 1;
pub const FT_FLAGS_HISPEED: _bindgen_ty_6 = 2;
pub type _bindgen_ty_6 = ::std::os::raw::c_int;
unsafe extern "stdcall" {
    pub fn FT_CreateDeviceInfoList(lpdwNumDevs: LPDWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetDeviceInfoList(
        pDest: *mut FT_DEVICE_LIST_INFO_NODE,
        lpdwNumDevs: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetDeviceInfoDetail(
        dwIndex: DWORD,
        lpdwFlags: LPDWORD,
        lpdwType: LPDWORD,
        lpdwID: LPDWORD,
        lpdwLocId: LPDWORD,
        lpSerialNumber: LPVOID,
        lpDescription: LPVOID,
        pftHandle: *mut FT_HANDLE,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetDriverVersion(ftHandle: FT_HANDLE, lpdwVersion: LPDWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetLibraryVersion(lpdwVersion: LPDWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Rescan() -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Reload(wVid: WORD, wPid: WORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetComPortNumber(ftHandle: FT_HANDLE, lpdwComPortNumber: LPLONG) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_ReadConfig(ftHandle: FT_HANDLE, ucAddress: UCHAR, pucValue: PUCHAR) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_WriteConfig(ftHandle: FT_HANDLE, ucAddress: UCHAR, ucValue: UCHAR) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_ReadECC(ftHandle: FT_HANDLE, ucOption: UCHAR, lpwValue: LPWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetQueueStatusEx(ftHandle: FT_HANDLE, dwRxBytes: *mut DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ComPortIdle(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ComPortCancelIdle(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_VendorCmdGet(
        ftHandle: FT_HANDLE,
        Request: UCHAR,
        Buf: *mut UCHAR,
        Len: USHORT,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_VendorCmdSet(
        ftHandle: FT_HANDLE,
        Request: UCHAR,
        Buf: *mut UCHAR,
        Len: USHORT,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_VendorCmdGetEx(
        ftHandle: FT_HANDLE,
        wValue: USHORT,
        Buf: *mut UCHAR,
        Len: USHORT,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_VendorCmdSetEx(
        ftHandle: FT_HANDLE,
        wValue: USHORT,
        Buf: *mut UCHAR,
        Len: USHORT,
    ) -> FT_STATUS;
}
